--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-font": "^11.1.0"
   }
 }
