--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ckeditor/ckeditor5-alignment": "^11.1.0",
     "@ckeditor/ckeditor5-font": "^11.1.0",
     "@ckeditor/ckeditor5-markdown-gfm": "^11.0.1",
+    "@ckeditor/ckeditor5-remove-format": "^10.0.1",
     "eslint": "^5.5.0",
     "eslint-config-ckeditor5": "^1.0.11",
     "husky": "^1.3.1",
